@@ -71,7 +71,7 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
         if (path.endsWith("/target/Digital.jar"))
             return new File(path.substring(0, path.length() - 19) + "/src/main/dig/lib");
         if (path.endsWith("Digital.jar"))
-            return new File(path.substring(0, path.length() - 12) + "/examples/lib");
+            return new File(path.substring(0, path.length() - 12) + "/lib");
 
         return new File("noLibFound");
     }
