@@ -593,13 +593,21 @@
         </faq>
         <faq>
             <question>When creating a JEDEC file: How to assign a pin number to a certain signal?</question>
-            <answer>At the corresponding inputs and outputs you can enter a pin number in the settings dialog of the pin.
+            <answer>At the corresponding inputs and outputs you can enter a pin number in the settings dialog of the
+                pin.
             </answer>
         </faq>
         <faq>
             <question>I have created a JEDEC file. How to program it to a <e>GAL16v8</e> or <e>GAL22v10</e>?
             </question>
             <answer>To program such a chip a special programmer hardware is necessary.</answer>
+        </faq>
+        <faq>
+            <question>I have created a circuit that I want to use in many other circuits.
+                How can I do this without copying the file over and over again into the appropriate folders?
+            </question>
+            <answer>The circuit can be saved in the "lib" folder. Then it is available in all other circuits.
+            </answer>
         </faq>
     </chapter>
     <chapter heading="Keyboard Shortcuts" newpage="true">
