@@ -1,6 +1,7 @@
 Release Notes
 
 Head, planned as v0.25
+- move the "lib" folder from the "examples" folder to the root folder.
 - 74193 was added
 
 v0.24, released on 1. Feb. 2020
